Camino only - Bug 371266: Fix the pref toggle for checking the default browser on launch. r=cl sr=smorgan